# learn-opengl

./: .clang-format  .gitignore  CMakeLists.txt  Camera.h  Color.hpp  GLApp.cpp  GLApp.h  Log.hpp  Matrix4.hpp  Program.hpp  Shader.hpp  Size.hpp  Texture.hpp  Triangle.hpp  Vec3D.hpp  VecN.hpp  VecND.hpp  VertexBuffer.hpp  build.sh  camera.h  gl_app.cpp  gl_app.h  log.h  main.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.hpp
.cache/clangd/index/: Color.hpp.824BFE52B1D79A0F.idx  Log.hpp.D5F56E4F3F1155A2.idx  Program.hpp.09E68887B261AA1F.idx  Shader.hpp.027120CE05CAE321.idx  Size.hpp.E9D104BAD9883468.idx  Triangle.hpp.F61E0AEA60FB48D7.idx  VecN.hpp.5FABB029CAE39787.idx  VertexBuffer.hpp.48B7FA21B30196C3.idx  glad.c.2ECA5B8B56ABE2DD.idx  glad.h.57225E68883A661B.idx  khrplatform.h.7FFC607913FE776A.idx  main.cpp.17B20979A9A60607.idx
demos/: CMakeLists.txt
demos/cube-3d-demo/: Cube3DDemo.cpp  Cube3DDemo.h
demos/glm-transform-demo/: GLMTransformDemo.cpp  GLMTransformDemo.h
demos/glsl-unifrom-demo/: ColorChangeTriangle.cpp  ColorChangeTriangle.h
demos/hello-triangle/: HelloTriangle.cpp
demos/hello-triangle-demo/: HelloTriangle.cpp  HelloTriangle.h
demos/lighting-caster-demo/: LightingCasterDemo.cpp  LightingCasterDemo.h  light.frag.glsl  lighting-cube.frag.glsl  lighting-cube.vertex.glsl
demos/lighting-demo/: LightingDemo.cpp  LightingDemo.h  lighting-cube.frag.glsl  lighting-cube.vertex.glsl
demos/lighting-maps-demo/: LightingMapsDemo.cpp  LightingMapsDemo.h  light.vertex.glsl  lighting-cube.frag.glsl
demos/material-demo/: MaterialDemo.cpp  MaterialDemo.h  lighting-cube.frag.glsl
demos/show-model-demo/: ShowModelDemo.cpp  ShowModelDemo.h  depth_test.vertex.glsl
demos/texture-mapping-demo/: TextureMappingDemo.cpp  TextureMappingDemo.h
glsl/: bag.frag.glsl  bag.vertex.glsl  depth_test.frag.glsl  depth_test.vertex.glsl  fragment.glsl  line.frag.glsl  line.vertex.glsl  stencil.fragment.glsl  vertex.glsl
include/: Camera.h  FileModel.h  GLApp.h  MemoryModel.h  Model.h  Program.h  Texture.h  log.h
open_source/: download.sh
open_source/glad/include/glad/: glad.h
open_source/glad/src/: glad.c
src/: Buffer.h  BufferType.h  CMakeLists.txt  Camera.cpp  DataTypes.h  GLApp.cpp  GLApp.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.hpp  Shader.cpp  Shader.h  Shader.hpp  ShowModelDemo.cpp  ShowModelDemo.h  WindowInfo.h  camera.cpp  camera.h  data_types.h  gl_app.cpp  gl_app.h  line_vertex_buffer.cpp  line_vertex_buffer.h  log.h  main.cpp  mesh.cpp  model.cpp  program.cpp  program.hpp  shader.cpp  triangle_vertex_buffer.cpp  triangle_vertex_buffer.h  vertex_buffer.cpp  vertex_buffer.hpp
