add_executable(
        ShowModelDemo
        show-model-demo/ShowModelDemo.cpp
        show-model-demo/ShowModelDemo.h
)
target_link_libraries(
        ShowModelDemo
        gypgltool
)

add_executable(
        HelloTriangle
        hello-triangle-demo/HelloTriangle.cpp
        hello-triangle-demo/HelloTriangle.h
)
target_link_libraries(
        HelloTriangle
        gypgltool
)

add_executable(
        glslUniform
        glsl-unifrom-demo/ColorChangeTriangle.cpp
        glsl-unifrom-demo/ColorChangeTriangle.h
)
target_link_libraries(
        glslUniform
        gypgltool
)
add_executable(
        textureMappingDemo
        texture-mapping-demo/TextureMappingDemo.cpp
)
target_link_libraries(
        textureMappingDemo
        gypgltool
)
