add_executable(
        ShowModelDemo
        show-model-demo/ShowModelDemo.cpp
        show-model-demo/ShowModelDemo.h
)
target_link_libraries(
        ShowModelDemo
        gypgltool
)

add_executable(
        HelloTriangle
        hello-triangle-demo/HelloTriangle.cpp
        hello-triangle-demo/HelloTriangle.h
)
target_link_libraries(
        HelloTriangle
        gypgltool
)

add_executable(
        glslUniform
        glsl-unifrom-demo/ColorChangeTriangle.cpp
        glsl-unifrom-demo/ColorChangeTriangle.h
)
target_link_libraries(
        glslUniform
        gypgltool
)
add_executable(
        textureMappingDemo
        texture-mapping-demo/TextureMappingDemo.cpp
)
target_link_libraries(
        textureMappingDemo
        gypgltool
)

add_executable(
        glmTransformDemo
        glm-transform-demo/GLMTransformDemo.cpp
)
target_link_libraries(
        glmTransformDemo
        gypgltool
)
add_executable(
        cube3DDemo
        cube-3d-demo/Cube3DDemo.cpp
)
target_link_libraries(
        cube3DDemo
        gypgltool
)
add_executable(
        lightingDemo
        lighting-demo/LightingDemo.cpp
)
target_link_libraries(
        lightingDemo
        gypgltool
)
add_executable(
        materialDemo
        material-demo/MaterialDemo.cpp
)
target_link_libraries(
        materialDemo
        gypgltool
)
add_executable(
        lightingMapsDemo
        lighting-maps-demo/LightingMapsDemo.cpp
)
target_link_libraries(
        lightingMapsDemo
        gypgltool
)
